add new version of appengine dependencies java dev server minor changes to MyEndpoint class fix newline in one of the jokes refactor webserver to show jokes in joke backend package

--- a/jokebackend/src/main/webapp/index.html
+++ b/jokebackend/src/main/webapp/index.html
@@ -51,18 +51,21 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1>Hello, Endpoints!</h1>
-                <p>Enter your name and press the button below to call your Google Cloud Endpoints
-                    API.</p>
-                <form>
+                <p>Click a button below to see a joke.</p>
+<!--                <form>
                     <div class="input-group">
                         <input type="text" class="form-control input-lg" placeholder="Name"
                                id="nameInput"/>
                         <span class="input-group-btn">
                              <button class="btn btn-default btn-primary btn-group btn-lg"
-                                     type="submit" id="helloButton">Say "Hello" &raquo;</button>
+                                     type="submit" id="helloButton">Tell a Joke &raquo;</button>
                           </span>
                     </div>
-                </form>
+                </form>-->
+
+                <button class="btn btn-default btn-primary btn-group btn-lg"
+                        type="submit" id="helloButton">Tell a Joke &raquo;</button>
+
                 <br/>
                 <p>If you need step-by-step instructions for connecting your Android application to
                     this backend module, see <a
@@ -86,11 +89,11 @@
 </div>
 
 <script type="text/javascript">
-    // A function that attaches a "Say Hello" button click handler
+    // A function that attaches a "Tell a Joke" button click handler
     function enableClick() {
       document.getElementById('helloButton').onclick = function() {
-        var name = document.getElementById('nameInput').value;
-        gapi.client.myApi.sayHi({'name': name}).execute(
+        <!--var name = document.getElementById('nameInput').value;-->
+        gapi.client.myJokeApi.getJoke().execute(
           function(response) {
             var outputAlertDiv = document.getElementById('outputAlert');
             outputAlertDiv.style.visibility = 'visible';
@@ -110,7 +113,7 @@
     }
     // This is called initially
     function init() {
-      var apiName = 'myApi';
+      var apiName = 'myJokeApi';
       var apiVersion = 'v1';
       var apiRoot = 'https://' + window.location.host + '/_ah/api';
       if (window.location.hostname == 'localhost'
